<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context="com.baqspace.proto.Compose">

    <item
        android:id="@+id/action_post"
        android:title="@string/action_post"
        android:visible="true"
        android:orderInCategory="100"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_attach"
        android:title="@string/action_attach"
        android:visible="false"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_cancel"
        android:title="@string/action_cancel"
        android:visible="true"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
