<android.support.v4.widget.DrawerLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/signup_layout"
    android:orientation="vertical"
    android:background="#808080"


    tools:context="com.baqspace.proto.SignUp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"


    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/homedefault"
        />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <EditText
                android:id="@+id/UserName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_username"
                />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_email"
                android:id="@+id/email_id"
                android:inputType="textEmailAddress"
                />

            <EditText
                android:id="@+id/pass1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_pass1"
                android:inputType="textPassword"
                />

            <EditText
                android:id="@+id/pass2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_pass2"
                android:inputType="textPassword"
                />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:text="@string/signup"
                android:id="@+id/btnRegister"
                android:background="#D3D3D3"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/lblRegistrationStatus"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>

</android.support.v4.widget.DrawerLayout>

