<android.support.v4.widget.DrawerLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.baqspace.proto.AddItem">

    <LinearLayout
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:orientation="vertical"
        >

        <include
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            layout="@layout/toolbar_layout"></include>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_title"
            android:id="@+id/item_title"
            android:textColor="#000000"
            android:layout_margin="10dp"
            />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:hint="@string/item_description"
            android:textColor="#000000"
            android:id="@+id/item_description"
            android:layout_margin="10dp"
            />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:hint="@string/item_price"
            android:id="@+id/item_price"
            android:layout_margin="10dp"
            />

    </LinearLayout>


</android.support.v4.widget.DrawerLayout>
