<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#808080"

    tools:context="com.baqspace.proto.EditDetails">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></include>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/edit_image"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:elevation="15dp"
                    android:visibility="visible" />


                <EditText
                    android:id="@+id/edit_username"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:hint="@string/signup_username"
                    android:textColor="@android:color/black"
                    android:textSize="22sp" />

                <EditText
                    android:id="@+id/edit_email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:hint="@string/signup_email"
                    android:textColor="@android:color/black"
                    android:textSize="22sp" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="20dp">

                    <RadioButton
                        android:id="@+id/radio_subscribe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="@string/radio_subscribe"

                        />

                    <RadioButton
                        android:id="@+id/radio_unsubscribe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="@string/radio_unsubscribe" />

                </RadioGroup>


            </LinearLayout>

        </ScrollView>

    </LinearLayout>


</android.support.v4.widget.DrawerLayout>
