<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/compose_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#808080"

    tools:context="com.baqspace.proto.Compose">

    <android.support.design.widget.CoordinatorLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/compose_coordinatorlayout"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/linear"
            android:layout_marginTop="58dp"
            >

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:textColor="#FFFFFF"
                android:layout_marginTop="-10dp"
                android:hint="@string/compose_feed"
                android:id="@+id/compose_feed"
                android:elevation="5dp"
                />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:text="@string/market_day"
                    android:id="@+id/radio_day"
                    android:layout_gravity="start"

                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:text="@string/market_night"
                    android:id="@+id/radio_night"
                    android:layout_gravity="start"
                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:textColor="#FFFFFF"
                    android:layout_height="wrap_content"
                    android:text="@string/market_music"
                    android:id="@+id/radio_music"
                    android:layout_gravity="start"
                    />
            </RadioGroup>

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:id="@+id/compose_image"
                android:elevation="15dp"
                />

        </LinearLayout>


    </android.support.design.widget.CoordinatorLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <include
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            layout="@layout/toolbar_layout"
            />




    </LinearLayout>

</android.support.v4.widget.DrawerLayout>

